Data.Packed.Convert

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -85,6 +85,7 @@ library
                         Numeric.LinearAlgebra.Algorithms,
                         Graphics.Plot,
                         Numeric.LinearAlgebra.Tests
+                        Data.Packed.Convert
     other-modules:      Data.Packed.Internal,
                         Data.Packed.Internal.Common,
                         Data.Packed.Internal.Vector,
