--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -13,7 +13,7 @@ Description:        A purely functional interface to basic linear algebra comput
                     .
                     More information: <http://www.hmatrix.googlepages.com>
 Category:           Numerical, Math
-tested-with:        GHC ==6.8.3
+tested-with:        GHC ==6.10.0
 
 cabal-version:      >=1.2
 build-type:         Simple
@@ -119,14 +119,22 @@ library
 
         extra-libraries: gsl lapack
 
-        -- Include here additional libraries if they are
+        -- Include additional libraries if they are
         -- required by your system to link -lgsl -llapack
+
+        -- (In ubuntu/debian cblas is included in blas,
+        --  which is automatically linked by lapack, so
+        -- nothing more is required.)
+
         -- Examples:
 
-            -- blas                       -- (cblas included in blas), not required in ubuntu/debian,
-                                          -- automatically linked by lapack
+            -------- if blas/cblas are not automatically linked by lapack:
+            -- blas cblas
 
-            -- gslcblas                   -- nonoptimized cblas in gsl
+            -------- Nonoptimized cblas included in gsl:
+            -- gslcblas
 
-            -- f77blas cblas atlas gcc_s  -- for atlas-lapack in Arch Linux
-            -- blas gslcblas gfortran     -- for normal blas and lapack in Arch Linux
+            -------- Arch Linux with atlas-lapack:
+            -- f77blas cblas atlas gcc_s
+            -------- Arch Linux with normal blas and lapack:
+            -- blas gslcblas gfortran
