expose-bug flag

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -33,6 +33,10 @@ flag no-workaround
     description:    Expose the NaN problem
     default: False
 
+flag expose-bug
+    description:    Expose the NaN problem with debug information
+    default: False
+
 library
     if flag(splitBase)
       build-depends:    base >= 3, array, QuickCheck, HUnit, storable-complex
@@ -107,8 +111,12 @@ library
     if flag(unsafe)
         cpp-options: -DUNSAFE
 
-    if arch(i386) && !flag(no-workaround) && !flag(mkl)
+    if arch(i386) && !flag(no-workaround) && !flag(expose-bug) && !flag(mkl)
         cpp-options: -DWORKAROUND
+
+    if flag(expose-bug)
+        cpp-options: -DEXPOSEBUG
+
 
     if flag(mkl)
       if arch(x86_64)
