Compatibility with QuickCheck 2 as well as QuickCheck 1 Used the C preprocessor to make it compile against either QuickCheck version. Added some implementations for the new "shrink" method of class Arbitrary.
The tests (runTests 10) succeed when compiled with QC 1. 

With QC 2 (runTests 10 too) the fourth "vector operations" test (complex trigonometry) now fails. I don't know whether this is a bug in my changes, or whether QC 2 just generates Doubles differently and thus uncovered a real bug.

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -15,6 +15,8 @@ tested-with:        GHC ==6.10.1
 
 cabal-version:      >=1.2
 build-type:         Simple
+extra-source-files: lib/Numeric/LinearAlgebra/Tests/quickCheckCompat.h
+
 
 flag splitBase
     description:    Choose the new smaller, split-up base package.
@@ -34,9 +36,9 @@ flag unsafe
 
 library
     if flag(splitBase)
-      build-depends:    base >= 3, array, QuickCheck < 2, HUnit, storable-complex
+      build-depends:    base >= 3, array, QuickCheck, HUnit, storable-complex
     else
-      build-depends:    base < 3, QuickCheck < 2, HUnit, storable-complex
+      build-depends:    base < 3, QuickCheck, HUnit, storable-complex
 
     Build-Depends:      haskell98
     Extensions:         ForeignFunctionInterface,
