loadMatrix (based on wc)

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -55,9 +55,9 @@ flag unsafe
 
 library
     if flag(splitBase)
-      build-depends:    base >= 3, array, QuickCheck, HUnit, storable-complex
+      build-depends:    base >= 3, array, QuickCheck, HUnit, storable-complex, process
     else
-      build-depends:    base < 3, QuickCheck, HUnit, storable-complex
+      build-depends:    base < 3, QuickCheck, HUnit, storable-complex, process
 
     Build-Depends:      haskell98
     Extensions:         ForeignFunctionInterface,
@@ -121,6 +121,13 @@ library
                         Numeric.LinearAlgebra.Tests.Properties
     C-sources:          lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.c,
                         lib/Numeric/GSL/gsl-aux.c
+    extra-source-files: lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.h,
+                        lib/Numeric/LinearAlgebra/LAPACK/clapack.h,
+                        lib/Numeric/GSL/gsl-aux.h
+
+    extra-source-files: lib/Numeric/GSL/Special/auto.hs,
+                        lib/Numeric/GSL/Special/autoall.sh,
+                        lib/Numeric/GSL/Special/replace.hs
 
     ghc-prof-options:   -auto-all
 
