added special transport and elljac

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -98,19 +98,21 @@ library
                         Numeric.GSL.Special.Dilog,
                         Numeric.GSL.Special.Elementary,
                         Numeric.GSL.Special.Ellint,
+                        Numeric.GSL.Special.Elljac,
                         Numeric.GSL.Special.Expint,
                         Numeric.GSL.Special.Fermi_dirac,
                         Numeric.GSL.Special.Gegenbauer,
                         Numeric.GSL.Special.Hyperg,
                         Numeric.GSL.Special.Laguerre,
                         Numeric.GSL.Special.Lambert,
+                        Numeric.GSL.Special.Legendre,
+                        Numeric.GSL.Special.Log,
                         Numeric.GSL.Special.Pow_int,
                         Numeric.GSL.Special.Psi,
                         Numeric.GSL.Special.Synchrotron,
+                        Numeric.GSL.Special.Transport,
                         Numeric.GSL.Special.Trig,
                         Numeric.GSL.Special.Zeta,
-                        Numeric.GSL.Special.Log,
-                        Numeric.GSL.Special.Legendre,
                         Numeric.GSL,
                         Numeric.LinearAlgebra,
                         Numeric.LinearAlgebra.LAPACK,
