--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.7.0.0
+Version:            0.6.0.1
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -11,7 +11,7 @@ Description:        This library provides a purely functional interface to basic
                     and other numerical computations, internally implemented using
                     GSL, BLAS and LAPACK.
 Category:           Math
-tested-with:        GHC ==6.10.3
+tested-with:        GHC ==6.10.4
 
 cabal-version:      >=1.2
 build-type:         Custom
@@ -71,8 +71,8 @@ library
     Build-Depends:      haskell98,
                         QuickCheck, HUnit,
                         storable-complex,
-                        process
-                        -- parallel >= 2
+                        process,
+                        parallel >= 2
 
     Extensions:         ForeignFunctionInterface,
                         CPP
