--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.8.0.0
+Version:            0.8.1.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -64,11 +64,11 @@ flag unsafe
 
 library
     if flag(splitBase)
-      build-depends:    base >= 3 && < 5, array
+      build-depends:    base >= 3 && < 5, array < 0.3.0
     else
       build-depends:    base < 3
 
-    Build-Depends:      haskell98,
+    Build-Depends:      haskell98 < 1.0.1.1,
                         QuickCheck, HUnit,
                         storable-complex,
                         process
